# nota-desktop-application

./: .gitignore  README.md
Nota/: .gitignore  CMakeLists.txt  Main.qml  main.cpp
Nota/icons/: CMakeLists.txt
Nota/include/: Client.h  Driver.h  Server.h
Nota/playground/: CMakeLists.txt  Main.qml  main.cpp
Nota/qml/: MarkdownSection.qml  NCRoundButton.qml  NCTextArea.qml  NCToolButton.qml  NCVerticalBarButton.qml  NotesPage.qml  SideBar.qml  Theme.qml  VerticalBarButton.qml  WorkspaceSection.qml
Nota/resources/qml/: Header.qml  SideBar.qml  VerticalBarButton.qml
Nota/src/: Client.cpp  Driver.cpp  Server.cpp
